# sbmpo

./: .gitignore  BookModelResults_BM1.m  CMakeLists.txt  README.md  package.xml
cmake/: sbmpoConfig.cmake.in
csv/: config.csv
docker/: Dockerfile.sbmpo  Dockerfile.sbmpo-ros1  sbmpo_docker.bat  sbmpo_docker.sh
include/sbmpo/: SBMPO.hpp  model.hpp  sbmpo.hpp
include/sbmpo/algorithms/: Astar.hpp
include/sbmpo/benchmarks/: Benchmark.hpp  Obstacles2DBenchmark.hpp
matlab/: random_obstacles.m  sbmpo_config.m  sbmpo_obstacles.m  sbmpo_results.m  sbmpo_stats.m
matlab/examples/: AckermannSteeringConfig.m  DoubleIntegratorConfig.m  DoubleIntegratorResults.m  Obstacles2DResults.m  UnicycleSteeringConfig.m
sbmpo/: CMakeLists.txt  README.md  package.xml
sbmpo/include/sbmpo/: model.hpp  queue.hpp  sbmpo.hpp  types.hpp  util.hpp
sbmpo/include/sbmpo/types/: implicit_grid.hpp  node.hpp  node_queue.hpp  types.hpp
sbmpo/src/: sbmpo.cpp
sbmpo_benchmarking/: CMakeLists.txt
sbmpo_benchmarking/benchmarking/: obstacles.csv
sbmpo_benchmarking/csv/: config.csv  nodes.csv  stats.csv
sbmpo_benchmarking/include/sbmpo_benchmarking/: benchmark.hpp  csv_tool.hpp  halton.hpp
sbmpo_benchmarking/include/sbmpo_benchmarking/benchmark_models/: Grid2DBenchmark.hpp  SimpleRobotBenchmark.hpp  UnicycleSteeringBenchmark.hpp
sbmpo_benchmarking/include/sbmpo_benchmarking/benchmarks/: Obstacles2D.hpp
sbmpo_benchmarking/matlab/: BenchmarkConfig_DoubleIntegrator.asv  BenchmarkConfig_DoubleIntegrator.m  BenchmarkConfig_DoubleIntegrator_RSS.m  BenchmarkConfig_Grid2D.m  BenchmarkConfig_SimpleRobot.m  BenchmarkConfig_SimpleRobot_BF.m  BenchmarkConfig_SimpleRobot_HTvGR.m  BenchmarkConfig_SimpleSteering.m  BenchmarkConfig_SimpleSteering_BF.m  BenchmarkConfig_UnicycleSteering.m  BenchmarkConfig_UnicycleSteering_BF.m  BenchmarkConfig_UnicycleSteering_HTvGR.m  BenchmarkResult_2D.m  BenchmarkResult_2DObstacles.m  BenchmarkResult_BF.m  BenchmarkResult_HTvsGR.m  BenchmarkResults_DoubleIntegrator.asv  BenchmarkResults_DoubleIntegrator.m  BenchmarkResults_DoubleIntegrator_RSS.m  sbmpo_config.m  sbmpo_obstacles.m  sbmpo_results.m
sbmpo_benchmarking/matlab/others/: minDistanceHeurXY.m  minTimeGraph.m  minTimeHeur.m  ovalHeur.m  skidSteerCurve.m  solvTheta.m
sbmpo_benchmarking/matlab/others/min_time_paths/: minTimeGraph.m  sbmpo_results.m
sbmpo_benchmarking/matlab/others/plans/: nodes_1.csv  nodes_2.csv  nodes_3.csv
sbmpo_benchmarking/matlab/others/rrt_compare/: nodes_obs.csv  result.txt  rrt_1.csv  rrt_10.csv  rrt_2.csv  rrt_3.csv  rrt_4.csv  rrt_5.csv  rrt_6.csv  rrt_7.csv  rrt_8.csv  rrt_9.csv  rrt_compare.m
sbmpo_benchmarking/src/: double_integrator_benchmark.cpp  grid_2d_benchmark.cpp  simple_robot_benchmark.cpp  unicycle_steering_benchmark.cpp
sbmpo_models/: CMakeLists.txt  package.xml  todo.txt
sbmpo_models/benchmarking/: config.csv  nodes.csv  stats.csv
sbmpo_models/config/: basic_model_config.csv  book_model.csv  book_model_config.csv  book_model_verify.csv  car_model_config.csv  grid_2d_model.yaml
sbmpo_models/include/sbmpo_models/: AckermannSteering.hpp  DoubleIntegrator.hpp  Grid2D.hpp  SimpleRobot.hpp  SkidSteeredRobot.hpp  UnderwaterGlider.hpp  UnicycleSteering.hpp  _Template.hpp  basic_model.hpp  benchmark_model.hpp  benchmarking_util.hpp  book_model.hpp  car_model.hpp  csv_tool.hpp  csv_util.hpp  double_integrator_model.hpp
sbmpo_models/include/sbmpo_models/models/: basic_model.hpp  benchmarking_model.hpp  book_model.hpp  double_integrator_model.hpp  grid_2d_model.hpp  simple_steering_model.hpp
sbmpo_models/launch/: basic_model.launch  benchmark.launch  book_model.launch  car_model.launch  grid_2d_benchmark.launch  sbmpo.launch  simple_steering_benchmark.launch
sbmpo_models/matlab/: BasicModelConfig_Single.asv  BasicModelConfig_Single.m  BasicModelResults_Single.asv  BasicModelResults_Single.m  BenchmarkConfig_SimpleSteering.m  BenchmarkConfig_SimpleSteering_HTvGR.m  BenchmarkResult_2D.m  BookModelConfig_A1.m  BookModelConfig_A2.m  BookModelConfig_BF.asv  BookModelConfig_BF.m  BookModelConfig_BM1.m  BookModelConfig_BM2.asv  BookModelConfig_BM2.m  BookModelConfig_BM3.m  BookModelConfig_BM4.m  BookModelConfig_BM5.m  BookModelConfig_BM6.m  BookModelConfig_HTvGR.m  BookModelConfig_SamplesBM.m  BookModelConfig_Single.m  BookModelConfigurer.m  BookModelResults.m  BookModelResults_BF.m  BookModelResults_BM1.m  BookModelResults_BM2.asv  BookModelResults_BM2.m  BookModelResults_BM3.m  BookModelResults_BM4.m  BookModelResults_BM5.m  BookModelResults_BM6.m  BookModelResults_HTvGR.asv  BookModelResults_HTvGR.m  BookModelResults_Single.m  BookModelVisualizer.asv  BookModelVisualizer.m  CarModelConfig_Single.m  CarModelResults_Single.m  Grid2DModelConfig_Single.m  ResultsVisualizer.m  (+6 more)
sbmpo_models/matlab/docs/: result_large.txt  result_obstacles.txt
sbmpo_models/matlab/figures/: HTvsGR.fig  benchmark1.fig  benchmark2.fig  benchmark3.fig  benchmark4.fig  branchout_factor.fig  cost_050_01768.fig  cost_050_01768_format.fig  iter_050_01768.fig  rrt_sbmpo_large.fig  rrt_sbmpo_obstacles.fig  srate_050_03927_large.fig  time_050_01768.fig
sbmpo_models/results/: book_model.csv  book_model_results.csv  book_model_results_benchmark6.csv  obstacles.csv
sbmpo_models/results/basic_model/: obstacles.csv  results.csv  stats.csv
sbmpo_models/results/book_model/: obstacles.csv  results.csv  stats.csv
sbmpo_models/results/car_model/: obstacles.csv  results.csv  stats.csv
sbmpo_models/src/: basic_model_node.cpp  benchmarking_node.cpp  book_model_node.cpp  car_model_node.cpp  grid_2d_benchmark.cpp  simple_steering_benchmark.cpp
sbmpo_ros/: CMakeLists.txt  package.xml
src/: Astar.cpp  sbmpo.cpp
src/algorithms/: Astar.cpp
src/examples/: ackermann_steering_benchmark.cpp  double_integrator_benchmark.cpp  grid_2d_benchmark.cpp  unicycle_planner_test.cpp  unicycle_steering_benchmark.cpp
src/grids/: ImplicitGrid.cpp
src/models/: AckermannSteeringModel.cpp  DoubleIntegratorModel.cpp  UnicycleSteeringModel.cpp
src/queues/: PriorityQueue.cpp
src/tests/: unicycle_planner.cpp
(+25 files in other folders)
