<?xml version="1.0"?>
<package format="2">
  <name>sbmpo</name>
  <version>1.0.0</version>
  <description>SBMPO Planner</description>

  <maintainer email="jboylan@fsu.edu">Jonathan T. Boylan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

</package>
