<?xml version="1.0"?>
<package format="2">
  <name>sbmpo_models</name>
  <version>1.0.0</version>
  <description>SBMPO Planner Models</description>

  <maintainer email="jboylan@fsu.edu">Jonathan T. Boylan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sbmpo</depend>

</package>
